--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #DATABASE_URL=mysql://webantarus:AKltIQWTBvI7Yc@127.0.0.1:3306/webb?serverVersion=5.7
-DATABASE_URL=mysql://root@127.0.0.1:3306/GestRendeVous
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/gestrendevous
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
